--- a/NEEDLE/Storyboard/Base.lproj/Main.storyboard
+++ b/NEEDLE/Storyboard/Base.lproj/Main.storyboard
@@ -78,11 +78,11 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="ship" id="cPa-gy-q4n"/>
+                    <navigationItem key="navigationItem" id="CsW-QL-2bi"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1233" y="-175"/>
+            <point key="canvasLocation" x="2073" y="-176"/>
         </scene>
         <!--Third View Controller-->
         <scene sceneID="yq6-oc-VSq">
@@ -143,7 +143,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="9TE-94-17a" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
-                        <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
+                        <segue destination="ecf-e0-Rdd" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
                         <segue destination="RBC-yg-mw3" kind="relationship" relationship="viewControllers" id="3Dq-eI-KnO"/>
                         <segue destination="Mr7-b3-zdy" kind="relationship" relationship="viewControllers" id="znv-pj-NW7"/>
                         <segue destination="TXo-PQ-ikt" kind="relationship" relationship="viewControllers" id="D6P-iX-isT"/>
@@ -174,6 +174,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5yv-6z-l7M" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1232" y="-1093.8530734632684"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="seI-1U-Oj5">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ecf-e0-Rdd" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="ship" id="cPa-gy-q4n"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ITc-8b-4pe">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="8rJ-Kc-sve" kind="relationship" relationship="rootViewController" id="az8-wV-4L0"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FaX-H4-noh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1232" y="-175.41229385307346"/>
         </scene>
     </scenes>
     <resources>
