--- a/NEEDLE/Storyboard/Base.lproj/Main.storyboard
+++ b/NEEDLE/Storyboard/Base.lproj/Main.storyboard
@@ -125,16 +125,95 @@
                                             <outlet property="titleLabel" destination="kwc-tu-h9n" id="kaD-f6-8er"/>
                                         </connections>
                                     </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vDq-kY-l8I" userLabel="PostView" customClass="EventPostView" customModule="NEEDLE" customModuleProvider="target">
+                                        <rect key="frame" x="375" y="0.0" width="375" height="250"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9mI-Te-GaE">
+                                                <rect key="frame" x="15" y="15" width="46" height="27"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ese-pv-IzP">
+                                                <rect key="frame" x="15" y="75" width="345" height="170"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="170" id="YCY-Zc-Y7O"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Summary" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GjU-9r-Rsj">
+                                                <rect key="frame" x="80" y="213" width="71" height="17"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nDT-te-aDJ">
+                                                <rect key="frame" x="338" y="50" width="25" height="17"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BfS-Ve-F0b">
+                                                <rect key="frame" x="15" y="52" width="50" height="16"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="16" id="b6d-Pq-l4w"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="17"/>
+                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iv0-Bq-jBx">
+                                                <rect key="frame" x="20" y="180" width="50" height="50"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="iv0-Bq-jBx" secondAttribute="height" multiplier="1:1" id="Gis-Vh-cdT"/>
+                                                    <constraint firstAttribute="width" constant="50" id="YuS-Q3-sgR"/>
+                                                    <constraint firstAttribute="height" constant="50" id="eKO-Yl-1OK"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="GjU-9r-Rsj" firstAttribute="bottom" secondItem="iv0-Bq-jBx" secondAttribute="bottom" id="AJX-rA-OOq"/>
+                                            <constraint firstItem="BfS-Ve-F0b" firstAttribute="top" secondItem="9mI-Te-GaE" secondAttribute="bottom" constant="10" id="BK2-xs-cPH"/>
+                                            <constraint firstAttribute="bottom" secondItem="ese-pv-IzP" secondAttribute="bottom" constant="5" id="Cdo-Tb-55Z"/>
+                                            <constraint firstItem="nDT-te-aDJ" firstAttribute="top" secondItem="vDq-kY-l8I" secondAttribute="top" constant="50" id="HdH-lB-PZz"/>
+                                            <constraint firstItem="BfS-Ve-F0b" firstAttribute="leading" secondItem="9mI-Te-GaE" secondAttribute="leading" id="IAd-La-fFG"/>
+                                            <constraint firstAttribute="trailing" secondItem="ese-pv-IzP" secondAttribute="trailing" constant="15" id="M4E-cp-uLK"/>
+                                            <constraint firstItem="9mI-Te-GaE" firstAttribute="top" secondItem="vDq-kY-l8I" secondAttribute="top" constant="15" id="MDg-u7-aRK"/>
+                                            <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="9mI-Te-GaE" secondAttribute="trailing" constant="314" id="aDf-QY-5eL"/>
+                                            <constraint firstItem="GjU-9r-Rsj" firstAttribute="leading" secondItem="iv0-Bq-jBx" secondAttribute="trailing" constant="10" id="cbC-N2-Mcz"/>
+                                            <constraint firstAttribute="width" constant="375" id="dmp-jM-kjH"/>
+                                            <constraint firstAttribute="trailing" secondItem="nDT-te-aDJ" secondAttribute="trailing" constant="12" id="eEc-Or-YET"/>
+                                            <constraint firstItem="ese-pv-IzP" firstAttribute="leading" secondItem="vDq-kY-l8I" secondAttribute="leading" constant="15" id="evJ-Bv-n7b"/>
+                                            <constraint firstItem="9mI-Te-GaE" firstAttribute="leading" secondItem="vDq-kY-l8I" secondAttribute="leading" constant="15" id="fSW-uF-GiY"/>
+                                            <constraint firstItem="nDT-te-aDJ" firstAttribute="leading" relation="lessThanOrEqual" secondItem="BfS-Ve-F0b" secondAttribute="trailing" constant="291" id="hCC-Gz-Ivt"/>
+                                            <constraint firstAttribute="bottom" secondItem="iv0-Bq-jBx" secondAttribute="bottom" constant="20" id="jnu-sN-ZQ8"/>
+                                            <constraint firstItem="nDT-te-aDJ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="vDq-kY-l8I" secondAttribute="leading" constant="20" symbolic="YES" id="kYS-5K-jaj"/>
+                                            <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="GjU-9r-Rsj" secondAttribute="trailing" constant="224" id="llo-x4-h7a"/>
+                                            <constraint firstItem="iv0-Bq-jBx" firstAttribute="leading" secondItem="vDq-kY-l8I" secondAttribute="leading" constant="20" id="p0B-Hc-fNz"/>
+                                            <constraint firstItem="ese-pv-IzP" firstAttribute="top" secondItem="nDT-te-aDJ" secondAttribute="bottom" constant="8" symbolic="YES" id="yf4-RF-Qfs"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="authorLabel" destination="BfS-Ve-F0b" id="eXS-RN-psF"/>
+                                            <outlet property="dateLabel" destination="nDT-te-aDJ" id="ynK-ZO-coS"/>
+                                            <outlet property="profileImage" destination="iv0-Bq-jBx" id="vfv-JH-0ld"/>
+                                            <outlet property="summaryLabel" destination="GjU-9r-Rsj" id="Tn8-fd-HOm"/>
+                                            <outlet property="thumbnailImage" destination="ese-pv-IzP" id="9iM-Bv-XOo"/>
+                                            <outlet property="titleLabel" destination="9mI-Te-GaE" id="CNP-pT-FXh"/>
+                                        </connections>
+                                    </view>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="kAY-Wc-IzV" firstAttribute="top" secondItem="SEs-Fh-qB6" secondAttribute="top" id="3go-jm-gmm"/>
                                     <constraint firstAttribute="bottom" secondItem="kAY-Wc-IzV" secondAttribute="bottom" id="6wg-gS-rt9"/>
                                     <constraint firstItem="kAY-Wc-IzV" firstAttribute="centerX" secondItem="SEs-Fh-qB6" secondAttribute="centerX" id="A3m-A4-OBd"/>
                                     <constraint firstAttribute="trailing" secondItem="kAY-Wc-IzV" secondAttribute="trailing" id="EkA-5M-3Tp"/>
+                                    <constraint firstItem="vDq-kY-l8I" firstAttribute="leading" secondItem="kAY-Wc-IzV" secondAttribute="trailing" id="PYT-Qa-cZP"/>
                                     <constraint firstItem="kAY-Wc-IzV" firstAttribute="leading" secondItem="SEs-Fh-qB6" secondAttribute="leading" id="X9m-EG-2VJ"/>
                                     <constraint firstAttribute="trailing" secondItem="kAY-Wc-IzV" secondAttribute="trailing" id="YBI-bq-SDN"/>
                                     <constraint firstAttribute="bottom" secondItem="kAY-Wc-IzV" secondAttribute="bottom" id="c1F-3y-Weg"/>
                                     <constraint firstItem="kAY-Wc-IzV" firstAttribute="centerY" secondItem="SEs-Fh-qB6" secondAttribute="centerY" id="cHC-z5-yTI"/>
+                                    <constraint firstItem="vDq-kY-l8I" firstAttribute="top" secondItem="kAY-Wc-IzV" secondAttribute="top" id="dGn-MW-cMZ"/>
+                                    <constraint firstItem="vDq-kY-l8I" firstAttribute="bottom" secondItem="kAY-Wc-IzV" secondAttribute="bottom" id="gPu-60-0Y6"/>
                                     <constraint firstItem="kAY-Wc-IzV" firstAttribute="top" secondItem="SEs-Fh-qB6" secondAttribute="top" id="lxT-vy-beX"/>
                                     <constraint firstItem="kAY-Wc-IzV" firstAttribute="leading" secondItem="SEs-Fh-qB6" secondAttribute="leading" id="ruu-zn-E4b"/>
                                     <constraint firstAttribute="height" constant="250" id="wPv-3u-1wI"/>
@@ -288,7 +367,8 @@
                         <outlet property="mainView" destination="tsR-hK-woN" id="sop-zh-A6E"/>
                         <outlet property="nearIssuePage" destination="IJX-I8-dEH" id="1sa-of-3Lm"/>
                         <outlet property="nearIssueScrollView" destination="SEs-Fh-qB6" id="I7V-Gd-AMA"/>
-                        <outlet property="nearIssueView" destination="kAY-Wc-IzV" id="Dic-c1-aYS"/>
+                        <outlet property="nearIssueView" destination="kAY-Wc-IzV" id="Em0-ta-8h7"/>
+                        <outlet property="nearIssueView2" destination="vDq-kY-l8I" id="IQ4-Mh-tlA"/>
                         <outlet property="recommendIssueScrollView" destination="abF-Wu-D8I" id="fGO-PN-NRr"/>
                         <outlet property="recommendIssueView" destination="rCb-cj-D1L" id="IlF-GC-hAG"/>
                     </connections>
@@ -609,7 +689,7 @@
                                     <outlet property="userPhoto" destination="bzT-qL-h79" id="qmS-X1-yw4"/>
                                 </connections>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YSs-wh-bUO">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YSs-wh-bUO">
                                 <rect key="frame" x="0.0" y="150" width="375" height="468"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
