--- a/NEEDLE/Storyboard/Base.lproj/Main.storyboard
+++ b/NEEDLE/Storyboard/Base.lproj/Main.storyboard
@@ -743,7 +743,9 @@
         <scene sceneID="SKU-dA-IvA">
             <objects>
                 <navigationController id="oqx-e8-tiF" customClass="ThirdViewController" customModule="NEEDLE" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="message" id="bHa-Wl-Rsk"/>
+                    <tabBarItem key="tabBarItem" title="" image="message" id="bHa-Wl-Rsk">
+                        <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-6"/>
+                    </tabBarItem>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5Jj-Aa-H1v">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -2122,7 +2124,9 @@
         <scene sceneID="Oav-G8-beK">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9TE-94-17a" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="home " id="acW-dT-cKf"/>
+                    <tabBarItem key="tabBarItem" title="" image="home " id="acW-dT-cKf">
+                        <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-6"/>
+                    </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="lB5-Cf-XcJ">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -2144,7 +2148,9 @@
         <scene sceneID="seI-1U-Oj5">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ecf-e0-Rdd" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="ship" id="cPa-gy-q4n"/>
+                    <tabBarItem key="tabBarItem" title="" image="ship" id="cPa-gy-q4n">
+                        <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-6"/>
+                    </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ITc-8b-4pe">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -2166,7 +2172,9 @@
         <scene sceneID="Ma3-Bt-XRD">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="FSp-VG-CBs" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" image="events" id="J4h-rs-Az6"/>
+                    <tabBarItem key="tabBarItem" image="events" id="J4h-rs-Az6">
+                        <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-6"/>
+                    </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="SAI-54-K2n">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -2188,7 +2196,9 @@
         <scene sceneID="vjP-kh-LYn">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1Zm-xY-qmn" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" image="more" id="QGd-A5-0Rc"/>
+                    <tabBarItem key="tabBarItem" image="more" id="QGd-A5-0Rc">
+                        <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-6"/>
+                    </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="V15-1q-ShI">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
