--- a/NEEDLE/Storyboard/Base.lproj/Main.storyboard
+++ b/NEEDLE/Storyboard/Base.lproj/Main.storyboard
@@ -1934,7 +1934,7 @@
                             <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gSx-xe-iYx">
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultCover" translatesAutoresizingMaskIntoConstraints="NO" id="gSx-xe-iYx">
                                     <rect key="frame" x="0.0" y="-20" width="375" height="200"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="200" id="ICL-Lt-4hS"/>
@@ -2550,6 +2550,7 @@
         <image name="addButton" width="90" height="90"/>
         <image name="back" width="29" height="17"/>
         <image name="close" width="16" height="16"/>
+        <image name="defaultCover" width="1600" height="600"/>
         <image name="done " width="20" height="20"/>
         <image name="email " width="20" height="15"/>
         <image name="events" width="20" height="20"/>
