--- a/NEEDLE/Storyboard/Base.lproj/Main.storyboard
+++ b/NEEDLE/Storyboard/Base.lproj/Main.storyboard
@@ -2100,10 +2100,10 @@
             </objects>
             <point key="canvasLocation" x="-295" y="1729"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Main Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
             <objects>
-                <tabBarController id="49e-Tb-3d3" sceneMemberID="viewController">
+                <tabBarController id="49e-Tb-3d3" customClass="MainTabBarController" customModule="NEEDLE" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" id="W28-zg-YXA">
                         <rect key="frame" x="0.0" y="975" width="768" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
@@ -2125,13 +2125,7 @@
         <scene sceneID="Oav-G8-beK">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9TE-94-17a" sceneMemberID="viewController">
-<<<<<<< HEAD
-                    <tabBarItem key="tabBarItem" title="" image="home" id="acW-dT-cKf">
-                        <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-6"/>
-                    </tabBarItem>
-=======
-                    <tabBarItem key="tabBarItem" title="" image="home " id="acW-dT-cKf"/>
->>>>>>> 3e002b7048d5394ef7b6c8a10bbe3ec3a14e86eb
+                    <tabBarItem key="tabBarItem" title="" image="home" id="acW-dT-cKf"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="lB5-Cf-XcJ">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
